# bastion

./: .gitignore  AGENTS.md  README.md  justfile  package.json  test.db
cli/: main.go
conf/: cc-connect-example.toml
doc/eval/: 2026-07-06-correction.md  README.md
doc/solution/: bastion-cli-verification-output-prd.md  context-compaction-technical-design.md  context-projection-prd.md  derived-memory-prd.md  gocli-skills-prd.md  multi-agent-prd.md
docs/baseball-ai-prd-options/: 06-视频分析多维表格表头设计.md
evals/: README.md  athletics-cross-session-memory.toml  athletics-multiturn.toml  athletics-smoke.toml  attack-so-weak.toml  onboarding-introduction.toml  recent-games-analysis.toml  training-content-workflow.toml
fixtures/: bandori-demo.sql
material/: rules.md
prd/: player-performance-analysis-by-player-and-period.md  training-recommendation-approval.md
runtime/: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
runtime/scripts/: pdf2md.ts
runtime/solution/: multi-agent-technical-design.md
runtime/src/: cli.test.ts  cli.ts  env-loader.test.ts  env-loader.ts  main.test.ts  main.ts  runtime-host.test.ts  runtime-host.ts  session-storage.test.ts  session-storage.ts  skill.test.ts
skills/drill-cards/: SKILL.md
src/: go.mod  go.sum  main.go
teamops/: go.mod  go.sum  main.go
tools/retrosheet-data/: README.md  prepare_athletics_2025.py  (+1 more)
tools/rules-pdf/: README.md  pyproject.toml
tools/rules-pdf/src/rules_pdf/: __init__.py  cli.py  postprocess.py
tools/rules-pdf/tests/: test_cli.py  test_postprocess.py
(+268 files in other folders)
