[project]
name = "bastion-rules-pdf"
version = "0.1.0"
description = "Convert official baseball rules PDFs into ingestible Markdown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
rules-pdf = "rules_pdf.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rules_pdf"]
